kubernetes/archive/home/03-pihole.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  labels:
    app: pihole
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      volumes:
        - name: pihole-storage
          persistentVolumeClaim:
            claimName: ssd-claim-pihole
      containers:
        - name: pihole
          image: pihole/pihole
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-storage
              subPath: etc
            - mountPath: /etc/dnsmasq.d
              name: pihole-storage
              subPath: dnsmasq
