kubernetes/archive/home/05-pihole-http.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-http-service
  namespace: home
spec:
  selector:
    app: pihole
  ports:
    - name: http
      protocol: TCP
      port: 80
