kubernetes/archive/home/06-pihole.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: home
spec:
  ingressClassName: nginx
  rules:
    - host: hole.example.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-http-service
                port:
                  number: 80
